# advent_of_code

./: .gitignore  fizzbuzz.py  pyproject.toml  vimtutor
advent_of_code_2022/day1/: day1.py  part1.py  part2.py
advent_of_code_2022/day2/: day2.py  part1.py  part2.py  testing_functions.py
advent_of_code_2022/day3/: part1.py  part2.py
advent_of_code_2022/day4/: part1.py  part2.py
advent_of_code_2022/day5/: part1.py  part2.py
advent_of_code_2022/day6/: part1.py  part2.py
advent_of_code_2022/day7/: part1.py
advent_of_code_2023/day1/: part1.py
advent_of_code_2023/day2/: part1.py  part2.py
advent_of_code_2023/day3/: part1.py
old/: vimtutor  vimtutor.bak
old/advent_of_code_2022/day1/: day1.py
old/advent_of_code_2022/day2/: part1.py
old/advent_of_code_2022/day3/: part1.py  part2.py
old/advent_of_code_2022/day5/: part2.py
old/advent_of_code_2023/day1/: part1.py  part2.py
old/advent_of_code_2023/day2/: part1.py  part2.py
