[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Daniel Aanensen <tetochrono@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
